[gd_scene load_steps=2 format=3 uid="uid://nvkf1hyu2yre"]

[ext_resource type="Script" path="res://win_menu.gd" id="1_yt5uw"]

[node name="win_menu" type="PopupPanel"]
size = Vector2i(1039, 164)
visible = true
script = ExtResource("1_yt5uw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = 4.0
offset_right = 1035.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Congratulations, you have managed to kill a snake!"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "And it took you only %d mouses to do this!"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Too bad those mouse won't be able to see your victory..."
horizontal_alignment = 1

[node name="try_again_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Try again"

[node name="exit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit
"
